# dkn-search-node

./: Cargo.toml
src/: main.rs
src/compute/: constants.rs  mod.rs  ollama.rs
src/compute/search/: agent.rs  mod.rs
src/compute/search/tools/: finance.rs  mod.rs  scraper.rs  search_ddg.rs  search_google.rs
src/compute/search/utils/: browserless.rs  mod.rs  openai.rs  vectorstore.rs
src/workers/: mod.rs  search.rs
tests/: langchain_test.rs
