[package]
name = "dkn-compute"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[features]
default = ["search"]
synthesis = []
search = []

# test features
waku_test = []
ollama_test = []
langchain_test = []

[dependencies]
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.3", features = ["json"] }

# encodings
base64 = "0.22.0"
hex = "0.4.3"
hex-literal = "0.4.1"
url = "2.5.0"
urlencoding = "2.1.3"

# logging
env_logger = "0.11.3"
log = "0.4.21"

# encryption (ecies) & signatures (ecdsa)
ecies = { version = "0.2", default-features = false, features = ["pure"] }
libsecp256k1 = "0.7.1"

# bloom filters
fastbloom-rs = "0.5.9"

# hashing stuff
sha2 = "0.10.8"
sha3 = "0.10.8"

# connects with Ollama running locally
ollama-rs = "0.1.8"
parking_lot = "0.12.2"
langchain-rust = "4.1.1"
scraper = "0.19.0"
text-splitter = "0.13.1"
search_with_google = "0.5.0"
html2text = "0.12.5"
async-trait = "0.1.80"

[dev-dependencies]
colored = "2.1.0"
rand = "0.8.5"

[[example]]
name = "ollama"
path = "./examples/benchmarks/ollama.rs"

[[example]]
name = "prompt"

[[example]]
name = "peers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
